# fastapi_blog

./: .gitignore  alembic.ini  logging.yaml  pyproject.toml
src/: crud.py  initial_data.py  logger.py  main.py
src/api/: dependencies.py
src/api/routes/: __init__.py  login.py  users.py  utils.py
src/api/routes/categories/: exceptions.py  router.py  services.py
src/api/routes/posts/: router.py  services.py
src/core/: config.py  database.py  db_init.py  security.py
src/email-templates/src/: reset_password.mjml  test_email.mjml  verify_email.mjml
src/migrations/: env.py
src/migrations/versions/: 09e10a4d2160_.py  3265c46a9bf9_add_column_is_verified_for_users.py  8059ff2ccbcc_added_post_tags.py  818bd2fc8d03_.py  a09f7c4f5459_.py
src/models/: categories.py  posts.py  tags.py  users.py
src/schemas/: auth.py  posts.py  users.py
src/utils/: emails.py  tokens.py
